<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Genesis</string>
    <string name="service_name">Genesis Connect</string>
    <string name="notification_content_text">Canbus Integration Service</string>
    
    <string name="changelog_full_title">Genesis Connect Change Log</string>
    <string name="changelog_title">What\'s New in Genesis Connect</string>
    <string name="changelog_ok_button">OK</string>

    <string name="cbt_name">CANBus Triple</string>
    
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    
    <string name="audio_controls">Audio Controls</string>
    <string name="bass">Bass</string>
    <string name="midrange">Mid Range</string>
    <string name="treble">Treble</string>
    <string name="fader">Fader</string>
    <string name="balance">Balance</string>
    
    <string name="reinitializing_bluetooth">Reinitializing Bluetooth</string>
    <string name="bluetooth_disabled">Bluetooth is disabled</string>
    <string name="no_bt_adapter">No Bluetooth adapter found</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="searching_for">Searching for %s</string>
    
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    
    <string name="bt_device_status">Device %s</string>
    
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="hi">HI</string>
    <string name="lo">LO</string>
    
    <string name="am">AM</string>
    <string name="fm1">FM1</string>
    <string name="fm2">FM2</string>
    
    <string name="settings_title">Genesis Connect Settings</string>
    <string name="settings_cbt_name">CBT BT Name:</string>
    <string name="settings_reconnect_on_charge">Only Reconnect when Charging</string>
    <string name="settings_bluetooth_connect">Connect on Bluetooth Connection</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_save">Save</string>

</resources>
